# pytorchures

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
configs/recommended_vscode_configurations/: extensions.json  launch.json  settings.json
object_detection/: pipeline.py  run_profiling.py  timing.py  torchvision_pipeline.py
pytorchures/: __init__.py  run_profiling.py  timing.py  torchvision_pipeline.py
tests/: test_object_detection.py  test_timing.py  test_torchvision_oo_pipeline.py
