[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorchures"
version = "0.1.2"
description = "Measure execution times of every layer in your pytorch model."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["pytorch", "performance", "layers", "profiling"]
dependencies = [
    "torch>=2,<3",
    "torchvision>=0.18,<1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]
publish = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/cezbloch/pytorchures"

[tool.setuptools]
packages = ["pytorchures"] # tells setuptools to include the pytorchures package/directory in the distribution

[tool.flake8]
max-line-length = 160

[tool.autopep8]
max_line_length = 160